3821B1PE1/2_gelu_cuda/sokolova_daria/log.txt
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(9): error: this declaration has no storage class or type specifier
  global void GeluKernel(const float* input, float* output, size_t size) {
  ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(9): error: expected a ";"
  global void GeluKernel(const float* input, float* output, size_t size) {
         ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(45): warning #12-D: parsing restarts here after previous syntax error
    GeluKernel<<<blocksPerGrid, threadsPerBlock>>>(deviceInputArray, deviceOutputArray, size);
                                                                                             ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(46): error: this declaration has no storage class or type specifier
    cudaMemcpy(output.data(), deviceOutputArray, bufferSize, cudaMemcpyDeviceToHost);
    ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(46): error: declaration is incompatible with "cudaError_t cudaMemcpy(void *, const void *, size_t, cudaMemcpyKind)" (declared at line 6752 of /usr/local/cuda/bin/../targets/x86_64-linux/include/cuda_runtime_api.h)
    cudaMemcpy(output.data(), deviceOutputArray, bufferSize, cudaMemcpyDeviceToHost);
    ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(46): error: identifier "output" is undefined
    cudaMemcpy(output.data(), deviceOutputArray, bufferSize, cudaMemcpyDeviceToHost);
               ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(46): error: identifier "deviceOutputArray" is undefined
    cudaMemcpy(output.data(), deviceOutputArray, bufferSize, cudaMemcpyDeviceToHost);
                              ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(46): error: identifier "bufferSize" is undefined
    cudaMemcpy(output.data(), deviceOutputArray, bufferSize, cudaMemcpyDeviceToHost);
                                                 ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(46): error: too many initializer values
    cudaMemcpy(output.data(), deviceOutputArray, bufferSize, cudaMemcpyDeviceToHost);
                              ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(48): error: this declaration has no storage class or type specifier
    cudaFree(deviceInputArray);
    ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(48): error: declaration is incompatible with "cudaError_t cudaFree(void *)" (declared at line 5547 of /usr/local/cuda/bin/../targets/x86_64-linux/include/cuda_runtime_api.h)
    cudaFree(deviceInputArray);
    ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(48): error: identifier "deviceInputArray" is undefined
    cudaFree(deviceInputArray);
             ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(49): error: this declaration has no storage class or type specifier
    cudaFree(deviceOutputArray);
    ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(49): error: variable "cudaFree" has already been defined (previous definition at line 48)
    cudaFree(deviceOutputArray);
    ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(51): error: expected a declaration
    return output;
    ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu(52): error: expected a declaration
  }
  ^

15 errors detected in the compilation of "/home/crazyproger/sandbox/cuda-2024/3821B1PE1/2_gelu_cuda/sokolova_daria/gelu_cuda.cu".
